--- a/style.css
+++ b/style.css
@@ -80,6 +80,14 @@ body {
   color: white;
   padding: 10px;
   border-radius: 30px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+.categories p:hover {
+  transition: 1s;
+  background-color: transparent;
+  color: #892de1;
+  border: 1px solid black;
 }
 
 .sale-image {
@@ -98,6 +106,21 @@ body {
   position: absolute;
   top: 10%;
   left: 10%;
+  animation: zoom;
+  animation-duration: 2s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .recommended {
