updated media queries

--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@ body {
   padding: 10px;
   align-items: center;
 }
-
+.navbar__s4 {
+  display: none;
+}
 /* My learning popup */
 .mylearning {
   position: relative;
@@ -133,7 +135,9 @@ body {
   flex-wrap: wrap;
 }
 .course-card {
-  width: 300px;
+  flex-grow: 1;
+  flex-basis: 20%;
+  margin: 5px;
 }
 .course-card img {
   height: 50%;
@@ -184,4 +188,27 @@ body {
 .footer_two {
   display: flex;
   justify-content: space-between;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 800px) {
+  body {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .course-card {
+    flex-basis: 40%;
+  }
+  .categories {
+    display: none;
+  }
+  .navbar__s2,
+  .navbar__s3 {
+    display: none;
+  }
+  .navbar__s4 {
+    display: block;
+  }
 }
